<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <description>Caritas Online Beratung: MessageService</description>

  <groupId>de.caritas.cob</groupId>
  <artifactId>messageservice</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>MessageService</name>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.8</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>17</java.version>
    <keycloak.version>17.0.0</keycloak.version>
    <!-- force at least version 2.16 due to https://logging.apache.org/log4j/2.x/security.html -->
    <log4j.version>2.17.1</log4j.version>
    <jackson.databind.nullable.version>0.2.3</jackson.databind.nullable.version>
    <openapi.generator.maven.version>6.4.0</openapi.generator.maven.version>
    <liquibase-core.version>4.23.2</liquibase-core.version>
    <liquibase-maven-plugin.version>4.23.2</liquibase-maven-plugin.version>
    <spring-security.version>6.3.4</spring-security.version>
    <springfox-boot-starter.version>3.0.0</springfox-boot-starter.version>
    <spring-security-test.version>6.0.8</spring-security-test.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <commons-lang3.version>3.11</commons-lang3.version>
    <commons-collections4.version>4.4</commons-collections4.version>
    <commons-codec.version>1.17.2</commons-codec.version>
    <spring-security-oauth2-test-webmvc-addons.version>3.0.1</spring-security-oauth2-test-webmvc-addons.version>
  </properties>

  <dependencies>
    <!-- Spring Boot dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-amqp</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-cache</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.sonatype.plexus</groupId>
      <artifactId>plexus-build-api</artifactId>
      <version>0.0.7</version>
      <scope>provided</scope>
      <exclusions>
        <exclusion>
          <groupId>org.codehaus.plexus</groupId>
          <artifactId>plexus-utils</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-utils</artifactId>
      <version>3.3.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents.client5</groupId>
      <artifactId>httpclient5</artifactId>
    </dependency>

    <!-- Spring actuator  -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <!-- OpenApi/Swagger dependencies -->
    <dependency>
      <groupId>org.openapitools</groupId>
      <artifactId>openapi-generator-maven-plugin</artifactId>
      <version>${openapi.generator.maven.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.openapitools</groupId>
      <artifactId>jackson-databind-nullable</artifactId>
      <version>${jackson.databind.nullable.version}</version>
    </dependency>
    <!-- SpringFox: generate YAML file from POJOs and generate documentation -->

    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations</artifactId>
      <version>2.2.15</version>
    </dependency>
    <!-- SpringFox: generate YAML file from POJOs and generate documentation -->

    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>2.6.0</version>
    </dependency>

    <!-- Keycloak dependencies -->
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-spring-security-adapter</artifactId>
      <version>${keycloak.version}</version>
    </dependency>
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-spring-boot-starter</artifactId>
      <version>${keycloak.version}</version>
    </dependency>
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-admin-client</artifactId>
      <version>${keycloak.version}</version>
    </dependency>
    <dependency>
      <groupId>jakarta.ws.rs</groupId>
      <artifactId>jakarta.ws.rs-api</artifactId>
    </dependency>

    <!-- Lombok dependencies -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.sentry</groupId>
      <artifactId>sentry-spring-boot-starter-jakarta</artifactId>
      <version>8.6.0</version>
    </dependency>

    <!-- Apache Commons Lang -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>

    <dependency>
      <groupId>com.github.jknack</groupId>
      <artifactId>handlebars</artifactId>
      <version>4.3.1</version>
    </dependency>

    <!-- Apache Commons Collections -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>${commons-collections4.version}</version>
    </dependency>

    <!-- Apache Commons Codec -->
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
    </dependency>

    <!-- Liquibase -->
    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-maven-plugin</artifactId>
      <version>${liquibase-maven-plugin.version}</version>
    </dependency>

    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-to-slf4j</artifactId>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- required only for WebMvc "fluent" API -->
      <groupId>com.c4-soft.springaddons</groupId>
      <artifactId>spring-security-oauth2-test-webmvc-addons</artifactId>
      <version>${spring-security-oauth2-test-webmvc-addons.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jeasy</groupId>
      <artifactId>easy-random-core</artifactId>
      <version>4.3.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.vmlens</groupId>
      <artifactId>concurrent-junit</artifactId>
      <version>1.0.2</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.github.fridujo</groupId>
      <artifactId>rabbitmq-mock</artifactId>
      <version>1.1.1</version>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/net.javacrumbs.json-unit/json-unit -->
    <dependency>
      <groupId>net.javacrumbs.json-unit</groupId>
      <artifactId>json-unit</artifactId>
      <version>2.25.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.sf.ehcache</groupId>
      <artifactId>ehcache</artifactId>
      <version>2.10.9.2</version>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>1_maven.apache.org</id>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <url>https://repo.maven.apache.org/maven2</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <build>
    <finalName>${project.name}</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <!-- OpenApi codegen maven plugin: generates api stubs -->
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>${openapi.generator.maven.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <sourceFolder>/</sourceFolder>
                <dateLibrary>custom</dateLibrary>
                <useSpringBoot3>true</useSpringBoot3>
              </configOptions>
              <inputSpec>${project.basedir}/api/messageservice.yaml</inputSpec>
              <generatorName>spring</generatorName>
              <apiPackage>${project.groupId}.${project.artifactId}.generated.api.controller
              </apiPackage>
              <modelPackage>${project.groupId}.${project.artifactId}.api.model</modelPackage>
              <generateSupportingFiles>true</generateSupportingFiles>
              <output>target/generated-sources</output>
              <typeMappings>
                <typeMapping>DateTime=Instant</typeMapping>
                <typeMapping>Date=LocalDate</typeMapping>
                <typeMapping>MessagesDTO=${project.groupId}.${project.artifactId}.api.model.rocket.chat.message.MessagesDTO</typeMapping>
              </typeMappings>
              <importMappings>
                <importMapping>Instant=java.time.Instant</importMapping>
                <importMapping>LocalDate=java.time.LocalDate</importMapping>
              </importMappings>
            </configuration>
          </execution>
          <!-- Generate client API for user service -->
          <execution>
            <id>uservice-client-model</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <configOptions>
                <sourceFolder>/</sourceFolder>
                <library>resttemplate</library>
                <dateLibrary>java8</dateLibrary>
              </configOptions>
              <inputSpec>${project.basedir}/services/userservice.yaml</inputSpec>
              <generatorName>java</generatorName>
              <generateApis>true</generateApis>
              <generateApiTests>false</generateApiTests>
              <generateModelTests>false</generateModelTests>
              <apiPackage>${project.groupId}.${project.artifactId}.userservice.generated.web</apiPackage>
              <modelPackage>${project.groupId}.${project.artifactId}.userservice.generated.web.model</modelPackage>
            </configuration>
          </execution>
          <!-- Generate client API for statistics service -->
          <execution>
            <id>statisticsservice-client-model</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <configOptions>
                <sourceFolder>/</sourceFolder>
                <library>resttemplate</library>
                <dateLibrary>java8</dateLibrary>
              </configOptions>
              <inputSpec>${project.basedir}/services/statisticsservice.yaml</inputSpec>
              <generatorName>java</generatorName>
              <generateApis>true</generateApis>
              <generateApiTests>false</generateApiTests>
              <generateModelTests>false</generateModelTests>
              <modelPackage>
                ${project.groupId}.${project.artifactId}.statisticsservice.generated.web.model
              </modelPackage>
            </configuration>
          </execution>
          <!-- Generate client API for tenant service -->
          <execution>
            <id>tenantservice-client-model</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <configOptions>
                <sourceFolder>/</sourceFolder>
                <library>resttemplate</library>
                <dateLibrary>java8</dateLibrary>
              </configOptions>
              <inputSpec>${project.basedir}/services/tenantservice.yaml</inputSpec>
              <generatorName>java</generatorName>
              <generateApis>true</generateApis>
              <generateApiTests>false</generateApiTests>
              <generateModelTests>false</generateModelTests>
              <apiPackage>${project.groupId}.${project.artifactId}.tenantservice.generated.web</apiPackage>
              <modelPackage>${project.groupId}.${project.artifactId}.tenantservice.generated.web.model</modelPackage>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- Code style check -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <configuration>
              <configLocation>google_checks_light.xml</configLocation>
              <failsOnError>true</failsOnError>
              <consoleOutput>true</consoleOutput>
              <failOnViolation>true</failOnViolation>
              <logViolationsToConsole>true</logViolationsToConsole>
              <violationSeverity>warning</violationSeverity>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin
        </artifactId> <!-- surefire plugin version managed by Spring Boot -->
        <configuration>
          <skipTests>true</skipTests>
          <argLine>--enable-preview</argLine>
        </configuration>
        <executions>
          <execution>
            <id>unit-tests</id>
            <phase>test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skipTests>false</skipTests>
              <includes>
                <include>**/*Test.java</include>
              </includes>
            </configuration>
          </execution>
          <execution>
            <id>integration-tests</id>
            <phase>integration-test</phase>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <skipTests>false</skipTests>
              <includes>
                <include>**/*IT.*</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>6.0.4</version>
        <configuration>
          <exportDatatables>true</exportDatatables>
          <activeRecipes>
            <recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_3</recipe>
          </activeRecipes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-spring</artifactId>
            <version>6.0.2</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>local</id>
      <properties>
        <activeSpringProfile>local</activeSpringProfile>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
    </profile>
    <profile>
      <id>dev</id>
      <properties>
        <activeSpringProfile>dev</activeSpringProfile>
      </properties>
    </profile>
    <profile>
      <id>prod</id>
      <properties>
        <activeSpringProfile>prod</activeSpringProfile>
      </properties>
    </profile>
  </profiles>

</project>
